--- a/src/Todo/app/src/main/AndroidManifest.xml
+++ b/src/Todo/app/src/main/AndroidManifest.xml
@@ -3,10 +3,9 @@
           package="kaleidot725.todo">
 
     <application
+            android:name=".TodoApplication"
             android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
         <activity
